@@ -1,18 +1,21 @@
 package nl.tudelft.simulation.dsol.statistics;
 
+import java.io.Serializable;
 import java.rmi.RemoteException;
 import java.util.Calendar;
 
-import javax.naming.Context;
-import javax.naming.InitialContext;
 import javax.naming.NamingException;
 
 import org.djunits.value.vdouble.scalar.Duration;
 import org.djunits.value.vdouble.scalar.Time;
 import org.djunits.value.vfloat.scalar.FloatDuration;
 import org.djunits.value.vfloat.scalar.FloatTime;
+import org.djutils.event.Event;
+import org.djutils.event.EventInterface;
+import org.djutils.event.EventProducerInterface;
+import org.djutils.event.EventType;
+import org.djutils.event.ref.ReferenceType;
 
-import nl.tudelft.simulation.dsol.logger.SimLogger;
 import nl.tudelft.simulation.dsol.simtime.SimTime;
 import nl.tudelft.simulation.dsol.simtime.SimTimeCalendarDouble;
 import nl.tudelft.simulation.dsol.simtime.SimTimeCalendarFloat;
@@ -23,18 +26,15 @@ import nl.tudelft.simulation.dsol.simtime.SimTimeFloat;
 import nl.tudelft.simulation.dsol.simtime.SimTimeFloatUnit;
 import nl.tudelft.simulation.dsol.simtime.SimTimeLong;
 import nl.tudelft.simulation.dsol.simulators.SimulatorInterface;
-import nl.tudelft.simulation.event.Event;
-import nl.tudelft.simulation.event.EventInterface;
-import nl.tudelft.simulation.event.EventProducerInterface;
-import nl.tudelft.simulation.event.EventType;
 import nl.tudelft.simulation.jstats.statistics.Counter;
 import nl.tudelft.simulation.jstats.statistics.Tally;
-import nl.tudelft.simulation.naming.context.ContextUtil;
+import nl.tudelft.simulation.naming.context.ContextInterface;
+import nl.tudelft.simulation.naming.context.util.ContextUtil;
 
 /**
  * The time-aware counter extends the generic counter and links it to the dsol framework.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -45,7 +45,8 @@ import nl.tudelft.simulation.naming.context.ContextUtil;
  * @param <R> the relative time type
  * @param <T> the absolute simulation time to use in the warmup event
  */
-public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R>, T extends SimTime<A, R, T>> extends Counter
+public class SimCounter<A extends Comparable<A> & Serializable, R extends Number & Comparable<R>, T extends SimTime<A, R, T>>
+        extends Counter
 {
     /** */
     private static final long serialVersionUID = 20140804L;
@@ -72,17 +73,18 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
         }
         else
         {
-            this.simulator.addListener(this, SimulatorInterface.WARMUP_EVENT, false);
+            this.simulator.addListener(this, SimulatorInterface.WARMUP_EVENT, ReferenceType.STRONG);
         }
-        this.simulator.addListener(this, SimulatorInterface.END_REPLICATION_EVENT, false);
+        this.simulator.addListener(this, SimulatorInterface.END_REPLICATION_EVENT, ReferenceType.STRONG);
         try
         {
-            Context context = ContextUtil.lookup(this.simulator.getReplication().getContext(), "/statistics");
-            ContextUtil.bind(context, this);
+            ContextInterface context =
+                    ContextUtil.lookupOrCreateSubContext(this.simulator.getReplication().getContext(), "statistics");
+            context.bindObject(this);
         }
         catch (NamingException exception)
         {
-            SimLogger.always().warn(exception, "<init>");
+            this.simulator.getLogger().always().warn(exception, "<init>");
         }
     }
 
@@ -98,7 +100,7 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
             final EventProducerInterface target, final EventType eventType) throws RemoteException
     {
         this(description, simulator);
-        target.addListener(this, eventType, false);
+        target.addListener(this, eventType, ReferenceType.STRONG);
     }
 
     /** {@inheritDoc} */
@@ -110,7 +112,7 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
         {
             return;
         }
-        if (event.getSource().equals(this.simulator))
+        if (event.getSourceId().equals(this.simulator.getSourceId()))
         {
             if (event.getType().equals(SimulatorInterface.WARMUP_EVENT))
             {
@@ -120,7 +122,8 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
                 }
                 catch (RemoteException exception)
                 {
-                    SimLogger.always().warn(exception, "problem removing Listener for SimulatorIterface.WARMUP_EVENT");
+                    this.simulator.getLogger().always().warn(exception,
+                            "problem removing Listener for SimulatorIterface.WARMUP_EVENT");
                 }
                 super.initialize();
                 return;
@@ -134,7 +137,7 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
                 }
                 catch (RemoteException exception)
                 {
-                    SimLogger.always().warn(exception,
+                    this.simulator.getLogger().always().warn(exception,
                             "problem removing Listener for SimulatorIterface.END_OF_REPLICATION_EVENT");
                 }
                 this.endOfReplication();
@@ -148,41 +151,33 @@ public class SimCounter<A extends Comparable<A>, R extends Number & Comparable<R
     }
 
     /**
-     * endOfReplication is invoked to store the final results. A special Tally is created in the Context to tally the counters
-     * of all replications. Herewith the confidence interval of the average counter results over the different replications can
-     * be calculated.
+     * endOfReplication is invoked to store the final results. A special Tally is created in the Context of the Experiment to
+     * tally the counters of all replications. Herewith the confidence interval of the average counter results over the
+     * different replications can be calculated.
      */
     @SuppressWarnings("checkstyle:designforextension")
     protected void endOfReplication()
     {
         try
         {
-            String[] parts = nl.tudelft.simulation.naming.context.ContextUtil.resolveKey(this).split("/");
-            String key = "";
-            for (int i = 0; i < parts.length; i++)
+            ContextInterface context = ContextUtil
+                    .lookupOrCreateSubContext(this.simulator.getReplication().getExperiment().getContext(), "statistics");
+            Tally experimentTally;
+            if (context.hasKey(this.description))
             {
-                if (i != parts.length - 2)
-                {
-                    key = key + parts[i] + "/";
-                }
+                experimentTally = (Tally) context.getObject(this.description);
             }
-            key = key.substring(0, key.length() - 1);
-            Tally tally = null;
-            try
+            else
             {
-                tally = (Tally) new InitialContext().lookup(key);
+                experimentTally = new Tally(this.description);
+                context.bindObject(this.description, experimentTally);
+                experimentTally.initialize();
             }
-            catch (NamingException exception)
-            {
-                tally = new Tally(this.description);
-                new InitialContext().bind(key, tally);
-                tally.initialize();
-            }
-            tally.notify(new Event(null, this, new Long(this.count)));
+            experimentTally.notify(new Event(null, getSourceId(), Long.valueOf(this.count)));
         }
         catch (Exception exception)
         {
-            SimLogger.always().warn(exception, "endOfReplication");
+            this.simulator.getLogger().always().warn(exception, "endOfReplication");
         }
     }
 
