@@ -30,7 +30,7 @@ public class ArrayInterpreterTest
         Assert.assertTrue("Content array1 == content array2", same);
 
         String s1 = getStringContentAt(a1, 2);
-        String s2 = (String) Interpreter.invoke(this, "getStringContentAt", new Object[] {a1, new Integer(2)},
+        String s2 = (String) Interpreter.invoke(this, "getStringContentAt", new Object[] {a1, Integer.valueOf(2)},
                 new Class<?>[] {String[].class, int.class});
         Assert.assertEquals("String array1[2] == 'ccc'", s2, "ccc");
         Assert.assertEquals("String array1[2] == array2[2]", s1, s2);
@@ -45,7 +45,7 @@ public class ArrayInterpreterTest
         double[] double2 = (double[]) Interpreter.invoke(this, "doubleArrayContent", new Object[] {}, new Class<?>[] {});
         Assert.assertArrayEquals("double arrays equal", double1, double2, 0.0);
         double doubleValue1 = getDoubleContentAt(double1, 3);
-        double doubleValue2 = (double) Interpreter.invoke(this, "getDoubleContentAt", new Object[] {double1, new Integer(3)},
+        double doubleValue2 = (double) Interpreter.invoke(this, "getDoubleContentAt", new Object[] {double1, Integer.valueOf(3)},
                 new Class<?>[] {double[].class, int.class});
         Assert.assertEquals("Double array2[3] == '4'", doubleValue2, 4.0d, 0.0);
         Assert.assertEquals("Double array1[3] == array2[3]", doubleValue1, doubleValue2, 0.0);
@@ -55,7 +55,7 @@ public class ArrayInterpreterTest
         float[] float2 = (float[]) Interpreter.invoke(this, "floatArrayContent", new Object[] {}, new Class<?>[] {});
         Assert.assertArrayEquals("float arrays equal", float1, float2, 0.0f);
         float floatValue1 = getFloatContentAt(float1, 3);
-        float floatValue2 = (float) Interpreter.invoke(this, "getFloatContentAt", new Object[] {float1, new Integer(3)},
+        float floatValue2 = (float) Interpreter.invoke(this, "getFloatContentAt", new Object[] {float1, Integer.valueOf(3)},
                 new Class<?>[] {float[].class, int.class});
         Assert.assertEquals("Float array2[3] == '4'", floatValue2, 4.0f, 0.0);
         Assert.assertEquals("Float array1[3] == array2[3]", floatValue1, floatValue2, 0.0);
@@ -65,7 +65,7 @@ public class ArrayInterpreterTest
         int[] int2 = (int[]) Interpreter.invoke(this, "intArrayContent", new Object[] {}, new Class<?>[] {});
         Assert.assertArrayEquals("int arrays equal", int1, int2);
         int intValue1 = getIntegerContentAt(int1, 3);
-        int intValue2 = (int) Interpreter.invoke(this, "getIntegerContentAt", new Object[] {int1, new Integer(3)},
+        int intValue2 = (int) Interpreter.invoke(this, "getIntegerContentAt", new Object[] {int1, Integer.valueOf(3)},
                 new Class<?>[] {int[].class, int.class});
         Assert.assertEquals("Integer array2[3] == '4'", intValue2, 4);
         Assert.assertEquals("Integer array1[3] == array2[3]", intValue1, intValue2);
@@ -75,7 +75,7 @@ public class ArrayInterpreterTest
         long[] long2 = (long[]) Interpreter.invoke(this, "longArrayContent", new Object[] {}, new Class<?>[] {});
         Assert.assertArrayEquals("long arrays equal", long1, long2);
         long longValue1 = getLongContentAt(long1, 3);
-        long longValue2 = (long) Interpreter.invoke(this, "getLongContentAt", new Object[] {long1, new Integer(3)},
+        long longValue2 = (long) Interpreter.invoke(this, "getLongContentAt", new Object[] {long1, Integer.valueOf(3)},
                 new Class<?>[] {long[].class, int.class});
         Assert.assertEquals("Long array2[3] == '4'", longValue2, 4L);
         Assert.assertEquals("Long array1[3] == array2[3]", longValue1, longValue2);
@@ -88,7 +88,7 @@ public class ArrayInterpreterTest
         Assert.assertArrayEquals("short arrays equal", short1, short2);
         short shortValue1 = getShortContentAt(short1, 3);
         short shortValue2 =
-                (short) (int) Interpreter.invoke(this, "getShortContentAt", new Object[]{short1, new Integer(3)},
+                (short) (int) Interpreter.invoke(this, "getShortContentAt", new Object[]{short1, Integer.valueOf(3)},
                         new Class<?>[]{short[].class, int.class});
         Assert.assertEquals("Short array2[3] == '4'", shortValue2, (short) 4);
         Assert.assertEquals("Short array1[3] == array2[3]", shortValue1, shortValue2);
@@ -99,7 +99,7 @@ public class ArrayInterpreterTest
         byte[] byte2 = (byte[]) Interpreter.invoke(this, "byteArrayContent", new Object[] {}, new Class<?>[] {});
         Assert.assertArrayEquals("byte arrays equal", byte1, byte2);
         byte byteValue1 = getByteContentAt(byte1, 3);
-        byte byteValue2 = (byte) Interpreter.invoke(this, "getByteContentAt", new Object[] {byte1, new Integer(3)},
+        byte byteValue2 = (byte) Interpreter.invoke(this, "getByteContentAt", new Object[] {byte1, Integer.valueOf(3)},
                 new Class<?>[] {byte[].class, int.class});
         Assert.assertEquals("Byte array2[3] == '4'", byteValue2, 4);
         Assert.assertEquals("Byte array1[3] == array2[3]", byteValue1, byteValue2);
