@@ -14,7 +14,7 @@ import nl.tudelft.simulation.language.filters.FilterInterface;
 /**
  * The xyDataset specifies the xyDataset in DSOL.
  * <p>
- * Copyright (c) 2002-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2002-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -112,14 +112,14 @@ public class XYDataset extends AbstractSeriesDataset implements org.jfree.data.x
     @Override
     public Number getX(final int serie, final int item)
     {
-        return new Double(this.series[serie].getXValue(item));
+        return Double.valueOf(this.series[serie].getXValue(item));
     }
 
     /** {@inheritDoc} */
     @Override
     public Number getY(final int serie, final int item)
     {
-        return new Double(this.series[serie].getYValue(item));
+        return Double.valueOf(this.series[serie].getYValue(item));
     }
 
     /**
