@@ -19,7 +19,7 @@ import nl.tudelft.simulation.introspection.beans.BeanIntrospector;
 /**
  * A tablemodel used to manage and present the instances of a map property.
  * <p>
- * Copyright (c) 2018-2019 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
+ * Copyright (c) 2018-2020 Delft University of Technology, Jaffalaan 5, 2628 BX Delft, the Netherlands. All rights reserved. See
  * for project information <a href="https://simulation.tudelft.nl/" target="_blank"> https://simulation.tudelft.nl</a>. The DSOL
  * project is distributed under a three-clause BSD-style license, which can be found at
  * <a href="https://simulation.tudelft.nl/dsol/3.0/license.html" target="_blank">
@@ -117,7 +117,7 @@ public class MapTableModel extends AbstractTableModel implements IntrospectingTa
      */
     private void addValue(final Object key, final Object value)
     {
-        Integer nextKey = new Integer(this.maxKey++);
+        Integer nextKey = Integer.valueOf(this.maxKey++);
         this.rowKeys.add(nextKey);
         this.keyMap.put(nextKey, key);
         this.valueMap.put(nextKey, value);
@@ -143,7 +143,7 @@ public class MapTableModel extends AbstractTableModel implements IntrospectingTa
     {
         if (columnIndex == 0)
         {
-            return new Integer(rowIndex);
+            return Integer.valueOf(rowIndex);
         }
         if (columnIndex == 1)
         {
